--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
-  "name": "website",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "compile-scss": "node compile-scss.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "sass": "^1.80.5"
-  }
+    "name": "website",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "compile-scss": "node compile-scss.js"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "devDependencies": {
+        "chokidar": "^4.0.3",
+        "npm-run-all": "^4.1.5",
+        "sass": "^1.80.5"
+    }
 }
